--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts:
+  firebase_core: 
   botton_nav_bar: ^1.0.2
   carousel_slider: 
   flutter_screenutil: 
+  widget_slider: ^0.1.0
 flutter_icons:
   android: true
   ios: true
