--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   botton_nav_bar: ^1.0.2
   carousel_slider: 
   flutter_screenutil: 
+  flutter_carousel_slider: 
   widget_slider: ^0.1.0
 flutter_icons:
   android: true
