--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   flutter_screenutil: 
   flutter_carousel_slider: 
   widget_slider: ^0.1.0
+  google_sign_in: 
+  font_awesome_flutter: ^9.0.0
+  provider: ^6.0.5
+  firebase_auth: 
+
+
 flutter_icons:
   android: true
   ios: true
