--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,15 +37,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts:
   firebase_core: 
-  botton_nav_bar: ^1.0.2
+  botton_nav_bar: 
   carousel_slider: 
   flutter_screenutil: 
   flutter_carousel_slider: 
-  widget_slider: ^0.1.0
+  widget_slider: 
   google_sign_in: 
-  font_awesome_flutter: ^9.0.0
-  provider: ^6.0.5
+  font_awesome_flutter: 
+  provider: 
   firebase_auth: 
+  cloud_firestore: 
 
 
 flutter_icons:
